--- a/index.html
+++ b/index.html
@@ -1,143 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="./estilo.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>cupid</title>
+    <link rel="stylesheet" href="./estilo.css" />
 </head>
-
-
-
 <body>
-	<a href="./tabela2.html"></a>
-	<table>
-		<thead>
-			<tr>
-				<th>Nome</th>
-				<th>e-mail</th>
-			</tr>
-		</thead>
+    <table>
+        <tr>
+        <th>Nome</th>
+        <th>Email</th>
+    </th>
+    <tr>
+        <td>João</td>
+          <td>joão@gmail</td>
+    </tr>
+    <tr>
+        <td>Maria</td>
+        <td>maria@gmail</td>
+    </tr>
+        <tr>
+            <td>Total</td>
+            <td>2</td>
+        </tr>
+    </table>
 
-		<tbody>
-			<tr>
-				<td>Joao</td>
-				<td>jose@gmail</td>
-			</tr>
-			<tr>
-				<td>Maria</td>
-				<td>maria@gmail</td>
-			</tr>
-		</tbody>
-		<tfoot>
-			<tr>
-				<td> Total</td>
-				<td>2</td>
-			</tr>
-		</tfoot>
-
-	</table>
-
-	<table>
-		<tr>
-			<td>1</td>
-			<td>2</td>
-			<td>3</td>
-			<td>4</td>
-		</tr>
-		<tr>
-			<td>5</td>
-			<td>6</td>
-			<td>7</td>
-			<td>8</td>
-		</tr>
-		<tr>
-			<td>9</td>
-			<td>10</td>
-			<td>11</td>
-			<td>12</td>
-		</tr>
-	</table>
-
-	<table>
-		<tr>
-			<td colspan="2">1</td>
-			<td rowspan="2">2</td>
-		</tr>
-		<tr>
-			<td>3</td>
-			<td>4</td>
-		</tr>
-	</table>
-
-	<table>
-		<tr>
-			<td></td>
-			<td colspan="3"></td>
-			<td rowspan="3"></td>
-		</tr>
-		<tr>
-			<td></td>
-			<td></td>
-			<td rowspan="2"></td>
-		</tr>
-		<tr>
-			<td colspan="2"></td>
-			<td colspan="2"></td>
-			
-		</tr>
-		<tr>
-			<td colspan="6"></td>
-			
-			
-			
-		</tr>
-	</table>
- <table>
-	<tr>
-		<td rowspan="4"></td>
-		<td colspan="4"></td>
-	</tr>
-	<tr>
-		<td></td>
-		<td colspan="2"></td>
-		<td></td>
-
-	</tr>
-	<tr>
-		<td colspan="2"></td>
-		<td colspan="2"></td>
-	</tr>
-	<tr>
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-	</tr>
- </table>
- <table>
-	<tr>
-		<td colspan="6"></td>
-
-	</tr>
-	<tr>
-		<td></td>
-		<td colspan="4"></td>
-		<td rowspan="3"></td>
-	</tr>
-	<tr>
-		<td colspan="2"></td>
-		<td></td>
-		<td colspan="2"></td>
-	</tr>
-	<tr>
-		<td></td>
-		<td colspan="3"></td>
-		<td></td>
-	</tr>
- </table>
+    <nav>
+        <li>
+            <a href="page1.html">Pagina 1</a>
+        </li>
+    </nav>
+    <li>
+        <a href="formulario.html">Pagina 1</a>
+    </li>
 </body>
-
 </html>
